# running-mate

./: .dockerignore  .env.TEMPLATE  Cargo.toml  Dockerfile  LICENSE-3RD-PARTY  README.md  deploy  docker-compose.yml  remote
nginx/: default  runningmate.ddns.net
src/: bot.rs  error.rs  flow.rs  lib.rs  main.rs  reminder.rs
