[package]
name = "running-mate"
version = "0.1.0"
authors = ["Martin Disch <martindisch@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-threadpool = "0.3.1"
mongodb = "0.9.0"
bson = "0.14.0"
serde_json = "1.0.44"
log = "0.4.8"
simplelog = "0.7.4"
rand = "0.7.3"
reqwest = { version = "0.10.1", features = ["blocking", "json", "rustls-tls"] }
chrono = "0.4.10"
